--- a/README
+++ b/README
@@ -2,9 +2,24 @@ Programming Boot Sector Games
 by Oscar Toledo G.
 http://nanochess.org/
 
+ERRATA FOR THE BOOK: (Apr/15/2020)
 
-Do you need more details on the inner workings? These programs are
-fully commented in my new book Programming Boot Sector Games and
+Even though all my efforts, Craig Turner found a pair of mistakes on the
+instruction set appendix.
+
+The instructions 0x9a and 0xea have inverted operands. The correct representation is:
+
+    CALL 0x5566:0x7788      9a 88 77 66 55
+    JMP 0x5566:0x7788       ea 88 77 66 55
+
+This same mistake slipped into my sequel book.
+
+
+NOTES:
+
+If you found this Git for accident, do you need more details on the inner workings? 
+
+These programs are fully commented in my new book Programming Boot Sector Games and
 also you'll find a 8086/8088 crash course!
 
 Now available from Lulu:
@@ -42,4 +57,20 @@ in only 512 bytes:
 
   https://github.com/nanochess/bootOS
 
-Enjoy it!
+After the success of my first book, if you need even
+More Boot Sector Games then you must get this book!
+
+  Soft-cover
+    http://www.lulu.com/shop/oscar-toledo-gutierrez/more-boot-sector-games/paperback/product-24462035.html
+
+  Hard-cover
+    http://www.lulu.com/shop/oscar-toledo-gutierrez/more-boot-sector-games/hardcover/product-24462029.html
+
+These are some of the example programs documented profusely
+in the book:
+
+  * Follow the Lights
+  * bootRogue
+  * bricks
+  * cubicDoom
+  * bootOS
